# FMCL

./: .commitlintrc.yml  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TERMS_OF_USE.md  achievement_defs.py  achievement_engine.py  achievement_sync.py  agent_cli.py  backup_manager.py  build.spec  cli_agent.py  config.json  config.py  curseforge.py  download_config.py  downloader.py  installer.nsi  launcher.py  main.py  mirror.py  modrinth.py  package.json  placeholder.txt  pyproject.toml  requirements-dev.txt  requirements-windows.txt  requirements.txt  screen_shot.py  secure_storage.py  structured_logger.py  ui.py  updater.py  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: music.json
docs/: ARCHITECTURE.md  BUILD_FIXES.md  CONFIGURATION.md  FEATURES.md  LINUX_FILE_LOCATIONS.md  PLUGIN_DEV.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
launcher/: __init__.py  account.py  core.py  java_install.py  java_scanner.py  modpack_compress.py  modpack_curseforge.py  modpack_hmcl.py  modpack_mcbbs.py  modpack_types.py  mrpack.py  multimc.py  multimc_types.py  predownload.py  server.py  verify.py
launcher/mod_classifier/: __init__.py  metadata.py  pipeline.py  query.py  rules.py  shared.py
minecraft_launcher_lib/: RECORD  __init__.py  _helper.py  command.py  exceptions.py  fabric.py  forge.py  install.py  java_utils.py  microsoft_account.py  microsoft_types.py  mrpack.py  natives.py  news.py  quilt.py  runtime.py  types.py  utils.py  vanilla_launcher.py
minecraft_launcher_lib/_internal_types/: forge_types.py  (+3 more)
plugin_manager/: __init__.py  base.py  dependency.py  hook_bus.py  installer.py  loader.py  manager.py  manifest.py  market.py  permissions.py
scripts/: fix_common_issues.py  install.sh  release.py
tests/: test_account.py  test_agent_xml_parser.py  test_imports.py  test_modrinth_versions.py  test_music_playlist.py  test_theme_engine.py
ui/: __init__.py  app.py  app_about.py  app_achievements.py  app_backup.py  app_base.py  app_crash.py  app_handlers.py  app_monitor.py  app_music.py  app_online.py  app_server.py  app_tools.py  constants.py  dialogs.py  download_minigame.py  i18n.py  music_desktop_lyric.py  music_effects.py  music_lyrics.py  music_playlist.py  theme_engine.py
(+68 files in other folders)
