[project]
name = "fmcl"
version = "2.11.3"
description = "Fusion Minecraft Launcher - A feature-rich Minecraft launcher with multi-threaded download support, Forge installation, and GUI version selection"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10,<3.12"
dependencies = [
    "minecraft-forgepy>=1.0",
    "requests>=2.28.0",
    "logzero>=1.7.0",
    "pyautogui>=0.9.53",
    "tqdm>=4.64.0",
    "keyboard>=0.13.5",
    "customtkinter>=5.2.0",
    "orjson>=3.9.0",
    "aiohttp>=3.9.0",
    "cryptography>=47.0.0",
    "rarfile>=4.1",
    "pygame>=2.6.1",
    "mutagen>=1.47.0",
    "winsdk>=1.0.0b10; sys_platform == 'win32'",
    "markdown>=3.7",
    "tkinterweb>=4.25.2",
    "tomli>=2.0.0; python_version < '3.11'",
    "psutil>=7.2.2",
    "nvidia-ml-py>=13.610.43",
    "tkhtmlview>=0.3.2",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
extend_skip_glob = ["tmp/*", "plugins/*", "api/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
